[package]
name = "uklid"
description = "Interactively delete node_modules."
license = "MIT"
version = "0.1.1"
authors = ["Atris <vacekj@outlook.com>"]
repository = "https://github.com/vacekj/uklid/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dialoguer = "0.10.0"
filesize = "0.2.0"
fs_extra = "1.2.0"
home = "0.5.3"
human_bytes = "0.3.1"
walkdir = "2.3.2"
